sumo/tests/od2trips/errors/vm/vmr_time_begin_false/errors.od2trips
Error: Broken period definition 'a 1.00'.
Quitting (on error).
